Thu Dec 16 04:20:50 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* code.c, code.h (Code_HasUndefSymbols): Made static.
	(codeValue): Merge Code_AddValueCode code into it.
	* decode.c (oDecodeTable): Add MAP/FIELD.
	(decode): Support ValueCode for StorageV values.
	* m_cpumem.c (DestMem_RelocUpdater): Don't assert on ValueInt result
	when ValueCode has length non-1, this is just an error.
	(dstmem): Follow codeValue API change.
	* storage.c: Support ValueCode as storage base.
	* regression/tests_pass/record_basic.s: Add MAP/FIELD tests, add test
	for MAP	argument being a label in the current AREA.
	* reloc.c (relocFix): Follow codeValue API change.
	* lit.c (Lit_DumpPool): Likewise.

Wed Dec 15 18:18:26 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/string.s: Enhance test with string escape
	characters.
	* regression/tests_pass/int.s: Added.
	* symbol.c (symbolFix): Always emit the implicit symbol reference
	warning.
	* error.c (errorCoreLine): Don't print linenumber 0.
	* macro.c (FS_PopMacroPObject): Reset pointer to NULL after freeing.
	(FS_PushMacroPObject): Copy all macro arguments instead of only the
	first one.
	(Macro_Call,Macro_Find): Renamed from macroCall/macroFind.
	(Macro_Call): Don't error on not using the macro label; Support default
	argument values; More reliable argument excess check.
	(c_macro): Support default argument values.
	* macro.h (Macro): Add defArgs array.
	(Macro_Call,Macro_Find): Renamed from macroCall/macroFind.
	(macroGetLine): Remove prototype.
	* decode.c: Follow the macroFind/macroCall rename.
	* whileif.c (if_skip): Support macro labels.
	* regression/tests_pass/macro_args.s: Added.

Wed Dec 15 13:47:41 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* decode.c (oDecodeTable): Add CODE16/CODE32.
	* m_cpu.c (c_code16, c_code32): Added.
	* m_cpu.h: Likewise.

Wed Dec 15 13:09:16 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* error.c (errorCore): Change "<stdin>" to "{standard input}" like the